--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,30 @@
     <string name="login_forgotpassword">Forgot Password?</string>
     <string name="login">Log In</string>
     <string name="login_google">Log In with Google</string>
+    <string name="login_failed">Invalid user or password</string>
+    <string name="login_succesfull">Access successfull</string>
+
+    <!-- Registro de cuenta -->
+    <string name="register_button">Create account</string>
+    <string name="register_login">Go to login</string>
+    <string name="register_email">Enter your email</string>
+    <string name="register_password">Enter your password</string>
+    <string name="register_name">Enter your name</string>
+    <string name="register_lastname">Enter your lastname</string>
+    <string name="register_phone">Enter your phone</string>
+    <string name="register_status_ok">Registration successfull!</string>
+    <string name="register_status_failed">Registration failed! Please try again later</string>
+    <string name="title_activity_mc_douglas">McDouglasActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+
 
 </resources>
