--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,21 @@
     <string name="register_phone">Enter your phone</string>
     <string name="register_status_ok">Registration successfull!</string>
     <string name="register_status_failed">Registration failed! Please try again later</string>
+
+    <!-- Menú superior -->
+    <string name="close_session">Log out</string>
+
+    <!-- Menú lateral -->
+    <string name="item_home">Food menu</string>
+    <string name="item_shoppingcart">Shopping cart</string>
+    <string name="item_payment">Payment methods</string>
+
+
+
+
+
+
+
     <string name="title_activity_mc_douglas">McDouglasActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -29,9 +44,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+
 
 
 </resources>
